Added class images and changed class on click

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="card__button">
-              <a class="species__link btn btn--big btn--blue" href="#" id="Human" data-container="#Human" data-toggle="popover" data-placement="top" data-content="Increases your Health.">
+              <a class="species__link btn btn--big btn--blue select" id="Human" data-container="#Human" data-toggle="popover" data-placement="top" data-content="Increases your Health.">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Human</span>
               </a>
@@ -61,7 +61,7 @@
 
           <div class="col-sm-4">
             <div class="card__button">
-              <a class="species__link btn btn--big btn--blue" href="#" id="Elf" data-container="#Elf" data-toggle="popover" data-placement="top" data-content="Increases your Intelligence.">
+              <a class="species__link btn btn--big btn--blue select" id="Elf" data-container="#Elf" data-toggle="popover" data-placement="top" data-content="Increases your Intelligence.">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Elf</span>
               </a>
@@ -70,7 +70,7 @@
 
           <div class="col-sm-4">
             <div class="card__button">
-              <a class="species__link btn btn--big btn--blue" href="#" id="Orc" data-container="#Orc" data-toggle="popover" data-placement="top" data-content="Increases your Strength.">
+              <a class="species__link btn btn--big btn--blue select" id="Orc" data-container="#Orc" data-toggle="popover" data-placement="top" data-content="Increases your Strength.">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Orc</span>
               </a>
@@ -78,7 +78,7 @@
           </div>
 
           <div class="card__button">
-            <a class="class__link btn btn--big btn--yellow" href="#" id="surpriseSpecies">
+            <a class="class__link btn btn--big btn--yellow select" id="surpriseSpecies">
               <span class="btn__prompt">></span>
               <span class="btn__text">Surprise Me</span>
             </a>
@@ -117,91 +117,103 @@
         <div class="row">
           <div class="col-sm-6 all-classes">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Warrior" data-container="#Warrior" data-toggle="popover" data-placement="top" data-content="Increases Health by 25 and Strength by 3">
+              <a class="class__link btn btn--big btn--blue select" id="Warrior" data-container="#Warrior" data-toggle="popover" data-placement="top" data-content="Increases Health by 25 and Strength by 3">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Warrior</span>
+                <img src="images/warrior.jpg" class="classImg">
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Wizard" data-container="#Wizard" data-toggle="popover" data-placement="top" data-content="Decreases Health by 15 but increases Intelligence by 4">
+              <a class="class__link btn btn--big btn--blue select" id="Wizard" data-container="#Wizard" data-toggle="popover" data-placement="top" data-content="Decreases Health by 15 but increases Intelligence by 4">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Wizard</span>
+                <img src="images/wizard.jpg" class="classImg">
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Thief" data-container="#Thief" data-toggle="popover" data-placement="top" data-content="Increases Health by 5 and Strength by 1">
+              <a class="class__link btn btn--big btn--blue select" id="Thief" data-container="#Thief" data-toggle="popover" data-placement="top" data-content="Increases Health by 5 and Strength by 1">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Thief</span>
+                <img src="images/thief.jpg" class="classImg">
               </a>
             </div>
           </div>
 
           <div class="col-sm-6 human-classes hide-selections">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Monk" data-container="#Monk" data-toggle="popover" data-placement="top" data-content="Increases Health by 10 and Strength by 4">
+              <a class="class__link btn btn--big btn--blue select" id="Monk" data-container="#Monk" data-toggle="popover" data-placement="top" data-content="Increases Health by 10 and Strength by 4">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Monk</span>
+                <img src="images/monk.jpeg" class="classImg">
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Conjurer" data-container="#Conjurer" data-toggle="popover" data-placement="top" data-content="Health is unaffected but Intelligence is increased by 2">
+              <a class="class__link btn btn--big btn--blue select" id="Conjurer" data-container="#Conjurer" data-toggle="popover" data-placement="top" data-content="Health is unaffected but Intelligence is increased by 2">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Conjurer</span>
+                <img src="images/conjurer.JPG" class="classImg">
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Assassin" data-container="#Assassin" data-toggle="popover" data-placement="top" data-content="Health is unaffected but Strength is increased by 1">
+              <a class="class__link btn btn--big btn--blue select" id="Assassin" data-container="#Assassin" data-toggle="popover" data-placement="top" data-content="Health is unaffected but Strength is increased by 1">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Assassin</span>
+                <img src="images/assassin.jpg" class="classImg">
               </a>
             </div>
 
           </div>
           <div class="col-sm-6 elf-classes hide-selections">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Valkyrie" data-container="#Valkyrie" data-toggle="popover" data-placement="top" data-content="Increases Health by 20 and Strength by 1">>
+              <a class="class__link btn btn--big btn--blue select" id="Valkyrie" data-container="#Valkyrie" data-toggle="popover" data-placement="top" data-content="Increases Health by 20 and Strength by 1">>
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Valkyrie</span>
+                <img src="images/valkyrie.jpg" class="classImg">
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Sorcerer" data-container="#Sorcerer" data-toggle="popover" data-placement="top" data-content="Decreases Health by 5 but increases Intelligence by 3">
+              <a class="class__link btn btn--big btn--blue select" id="Sorcerer" data-container="#Sorcerer" data-toggle="popover" data-placement="top" data-content="Decreases Health by 5 but increases Intelligence by 3">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Sorcerer</span>
+                <img src="images/sorcerer.jpg" class="classImg">
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Archer" data-container="#Archer" data-toggle="popover" data-placement="top" data-content="Increases Health by 30 but decreases Strength by 2">
+              <a class="class__link btn btn--big btn--blue select" id="Archer" data-container="#Archer" data-toggle="popover" data-placement="top" data-content="Increases Health by 30 but decreases Strength by 2">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Archer</span>
+                <img src="images/archer.jpg" class="classImg">
               </a>
             </div>
           </div>
           <div class="col-sm-6 orc-classes hide-selections">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Berserker" data-container="#Berserker" data-toggle="popover" data-placement="top" data-content="Increases Health by 35 and Strength by 3">
+              <a class="class__link btn btn--big btn--blue select" id="Berserker" data-container="#Berserker" data-toggle="popover" data-placement="top" data-content="Increases Health by 35 and Strength by 3">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Berserker</span>
+                <img src="images/berserker.jpg" class="classImg">
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Shaman" data-container="#Shaman" data-toggle="popover" data-placement="top" data-content="Increases Health by 5 and Intelligence by 2">
+              <a class="class__link btn btn--big btn--blue select" id="Shaman" data-container="#Shaman" data-toggle="popover" data-placement="top" data-content="Increases Health by 5 and Intelligence by 2">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Shaman</span>
+                <img src="images/shaman.jpg" class="classImg">
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Ninja" data-container="#Ninja" data-toggle="popover" data-placement="top" data-content="Decreases Health by 5 but increases Strength by 5">
+              <a class="class__link btn btn--big btn--blue select" id="Ninja" data-container="#Ninja" data-toggle="popover" data-placement="top" data-content="Decreases Health by 5 but increases Strength by 5">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Ninja</span>
+                <img src="images/ninja.jpg" class="classImg">
               </a>
             </div>
           </div>
@@ -209,7 +221,7 @@
           <!-- Surprise Me Button is Separate from All Other Groups -->
 
           <div class="card__button">
-            <a class="class__link btn btn--big btn--yellow" href="#" id="surpriseClass">
+            <a class="class__link btn btn--big btn--yellow select" id="surpriseClass">
               <span class="btn__prompt">></span>
               <span class="btn__text">Surprise Me</span>
             </a>
@@ -249,28 +261,28 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="card__button warrior-weapon thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="Dagger" data-container="#Dagger" data-toggle="popover" data-placement="top" data-content="Increases Health by 30 but decreases Strength by 2">
+              <a class="weapon__link btn btn--big btn--blue select" id="Dagger">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Dagger</span>
               </a>
             </div>
 
             <div class="card__button thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="Bow">
+              <a class="weapon__link btn btn--big btn--blue select" id="Bow">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Bow</span>
               </a>
             </div>
 
             <div class="card__button warrior-weapon thief-weapon valkyrie-weapon ninja-weapon">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="Sword">
+              <a class="weapon__link btn btn--big btn--blue select" id="Sword">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Sword</span>
               </a>
             </div>
 
             <div class="card__button warrior-weapon valkyrie-weapon monk-weapon berserker-weapon">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="LongSword">
+              <a class="weapon__link btn btn--big btn--blue select" id="LongSword">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Long Sword</span>
               </a>
@@ -279,21 +291,21 @@
 
           <div class="col-sm-4">
             <div class="card__button warrior-weapon valkyrie-weapon monk-weapon berserker-weapon">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="WarAxe">
+              <a class="weapon__link btn btn--big btn--blue select" id="WarAxe">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">War Axe</span>
               </a>
             </div>
 
             <div class="card__button warrior-weapon valkyrie-weapon monk-weapon berserker-weapon">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="Mace">
+              <a class="weapon__link btn btn--big btn--blue select" id="Mace">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Mace</span>
               </a>
             </div>
 
             <div class="card__button wizard-weapon sorcerer-weapon shaman-weapon conjurer-weapon">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="Staff">
+              <a class="weapon__link btn btn--big btn--blue select" id="Staff">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Staff</span>
               </a>
@@ -301,21 +313,21 @@
           </div>
           <div class="col-sm-4">
             <div class="card__button thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="CrossBow">
+              <a class="weapon__link btn btn--big btn--blue select" id="CrossBow">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Cross Bow</span>
               </a>
             </div>
 
             <div class="card__button warrior-weapon valkyrie-weapon monk-weapon berserker-weapon">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="WarHammer">
+              <a class="weapon__link btn btn--big btn--blue select" id="WarHammer">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">War Hammer</span>
               </a>
             </div>
 
             <div class="card__button thief-weapon valkyrie-weapon archer-weapon monk-weapon assassin-weapon ninja-weapon">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="BrassKnuckles">
+              <a class="weapon__link btn btn--big btn--blue select" id="BrassKnuckles">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Brass Knuckles</span>
               </a>
@@ -324,7 +336,7 @@
 
         <div class="col-sm-4">
           <div class="card__button">
-            <a class="weapon__link btn btn--big btn--yellow" href="#" id="SurpriseWeapon">
+            <a class="weapon__link btn btn--big btn--yellow select" id="SurpriseWeapon">
               <span class="btn__prompt">></span>
               <span class="btn__text">surprise me</span>
             </a>
