--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
             <div class="col-xs-4">
               <div class="battle">
                   <h2 id="battlePlayerName"> </h2>
+                  <div id="userImage"></div>
                   <div class="userProgress progress"></div>
                   <div class="user stats">
                   </div>
@@ -400,6 +401,7 @@
           <div class="col-xs-4">
               <div class="battle">
                   <h2 id="battleEnemyName"></h2>
+                  <div id="enemyImage"></div>
                   <div class="enemyProgress progress"></div>
                   <div class="enemy stats">
                   </div>
