Weapons grid flowing inline

--- a/index.html
+++ b/index.html
@@ -76,15 +76,16 @@
               </a>
             </div>
           </div>
-
+          </div>
+          <div class="row">
           <div class="card__button">
             <a class="class__link btn btn--big btn--yellow select" id="surpriseSpecies">
               <span class="btn__prompt">></span>
               <span class="btn__text">Surprise Me</span>
             </a>
           </div>
-
           </div>
+
         </div>
       </div>
 
@@ -217,16 +218,16 @@
               </a>
             </div>
           </div>
-
+          </div>
           <!-- Surprise Me Button is Separate from All Other Groups -->
-
+          <div class="row">
           <div class="card__button">
             <a class="class__link btn btn--big btn--yellow select" id="surpriseClass">
               <span class="btn__prompt">></span>
               <span class="btn__text">Surprise Me</span>
             </a>
           </div>
-
+          </div>
 
           </div>
         </div>
@@ -245,6 +246,8 @@
 <!-- WEAPON FILED -->
 
     <section id="weapon-select" class="card card--weapon">
+
+
       <div class="card__prompt">
         <div>choose your weapon</div>
         <div>
@@ -258,100 +261,90 @@
       </div>
 
       <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="card__button warrior-weapon thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon">
+            <div class="col-xs-4 card__button warrior-weapon thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon">
               <a class="weapon__link btn btn--big btn--blue select" id="Dagger">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Dagger</span>
               </a>
             </div>
-
-            <div class="card__button thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon">
+            <div class="col-xs-4 card__button thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon">
               <a class="weapon__link btn btn--big btn--blue select" id="Bow">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Bow</span>
               </a>
             </div>
-
-            <div class="card__button warrior-weapon thief-weapon valkyrie-weapon ninja-weapon">
+            <div class="col-xs-4 card__button warrior-weapon thief-weapon valkyrie-weapon ninja-weapon">
               <a class="weapon__link btn btn--big btn--blue select" id="Sword">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Sword</span>
               </a>
             </div>
-
-            <div class="card__button warrior-weapon valkyrie-weapon monk-weapon berserker-weapon">
+            <div class="col-xs-4 card__button warrior-weapon valkyrie-weapon monk-weapon berserker-weapon">
               <a class="weapon__link btn btn--big btn--blue select" id="LongSword">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Long Sword</span>
               </a>
             </div>
-          </div>
-
-          <div class="col-sm-4">
-            <div class="card__button warrior-weapon valkyrie-weapon monk-weapon berserker-weapon">
+            <div class="col-xs-4 card__button warrior-weapon valkyrie-weapon monk-weapon berserker-weapon">
               <a class="weapon__link btn btn--big btn--blue select" id="WarAxe">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">War Axe</span>
               </a>
             </div>
-
-            <div class="card__button warrior-weapon valkyrie-weapon monk-weapon berserker-weapon">
+            <div class="col-xs-4 card__button warrior-weapon valkyrie-weapon monk-weapon berserker-weapon">
               <a class="weapon__link btn btn--big btn--blue select" id="Mace">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Mace</span>
               </a>
             </div>
-
-            <div class="card__button wizard-weapon sorcerer-weapon shaman-weapon conjurer-weapon">
+            <div class="col-xs-4 card__button wizard-weapon sorcerer-weapon shaman-weapon conjurer-weapon">
               <a class="weapon__link btn btn--big btn--blue select" id="Staff">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Staff</span>
               </a>
             </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="card__button thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon">
+            <div class="col-xs-4 card__button thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon">
               <a class="weapon__link btn btn--big btn--blue select" id="CrossBow">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Cross Bow</span>
               </a>
             </div>
-
-            <div class="card__button warrior-weapon valkyrie-weapon monk-weapon berserker-weapon">
+            <div class="col-xs-4 card__button warrior-weapon valkyrie-weapon monk-weapon berserker-weapon">
               <a class="weapon__link btn btn--big btn--blue select" id="WarHammer">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">War Hammer</span>
               </a>
             </div>
-
-            <div class="card__button thief-weapon valkyrie-weapon archer-weapon monk-weapon assassin-weapon ninja-weapon">
+            <div class="col-xs-4 card__button thief-weapon valkyrie-weapon archer-weapon monk-weapon assassin-weapon ninja-weapon">
               <a class="weapon__link btn btn--big btn--blue select" id="BrassKnuckles">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Brass Knuckles</span>
               </a>
             </div>
-          </div>
-
-        <div class="col-sm-4">
-          <div class="card__button">
-
-            <a class="weapon__link btn btn--big btn--yellow select" id="SurpriseWeapon">
-              <span class="btn__prompt">></span>
-              <span class="btn__text">surprise me</span>
-            </a>
-          </div>
+        </div>
+       <div class="container-fluid">
+        <div class='row'>
+        <div class="card__button">
+          <a class="weapon__link btn btn--big btn--yellow select" id="surpriseWeapon">
+            <span class="btn__prompt">></span>
+            <span class="btn__text">surprise me</span>
+          </a>
+        </div>
         </div>
 
-      <div class="card__button">
-        <a class="card__link btn btn--big btn--orange doBattle"
-           href="#"
-           next="card--battleground">
+        <div class='row'>
+        <div class="card__button">
+          <a class="card__link btn btn--big btn--orange doBattle"
+            href="#"
+            next="card--battleground">
           <span class="btn__prompt">></span>
           <span class="btn__text">defeat your enemies</span>
-        </a>
-      </div>
+          </a>
+        </div>
+        </div>
+
+      </div> <!--CONTAINER DIV-->
+
     </section>
 
     <!-- Battle Field -->
