--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
       <div>Battle!</div>
 
         <div class="container-fluid">
-          <div class="row">
-            <div class="col-xs-4">
+          <div class="row row-eq-height">
+            <div class="col-xs-4 player">
               <div class="battle">
                   <h2 id="battlePlayerName"> </h2>
                   <div id="userImage"></div>
@@ -391,7 +391,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-4 player">
               <div class="battle">
                   <h2 id="battleEnemyName"></h2>
                   <div id="enemyImage"></div>
