Fixed button styling

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
     <section id="battle-field" class="card card--battleground">
       <!-- <div class="card__prompt"> -->
-      <div>Battle!</div>
+      <div class="battleName">Battle to the Death!</div>
 
         <div class="container-fluid">
           <div class="row row-eq-height">
