Added some styling changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Gauntlet</title>
+  <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="styles/gauntlet.css">
@@ -12,11 +13,7 @@
 <body>
 
   <article id="game-container">
-  <iframe id="buttonClick"
-    src="https://www.youtube.com/embed/XGSy3_Czz8k">
-  </iframe>
-  <!-- <audio id="buttonClicked" src="https://youtu.be/Qbj3_YvTma8"> -->
-
+    <div id="gauntletTitle">  GAUNTLET  </div>
 <!-- NAME FIELD -->
 
     <section id="player-setup" class="card card--name">
@@ -352,7 +349,7 @@
             href="#"
             next="card--battleground">
           <span class="btn__prompt">></span>
-          <span class="btn__text">defeat your enemies</span>
+          <span class="btn__text">Battle!</span>
           </a>
         </div>
         </div>
