--- a/index.html
+++ b/index.html
@@ -459,6 +459,7 @@
   <script src="javascripts/classes.js"></script>
   <script src="javascripts/weapons.js"></script>
   <script src="javascripts/spells.js"></script>
+  <script src="javascripts/sort.js"></script>
   <script src="javascripts/app.js"></script>
 
 </body>
