All audio working with themes and battle music

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             </div>
             <div class="hide-selections" id="magicInput">
               <div class="card__button" id="magicAttack">
-                <a class="card__link btn btn--big btn--blue attack-class" >
+                <a class="card__link btn btn--big btn--blue magic-attack-class" >
                   <span class="btn__prompt">></span>
                   <span class="btn__text">Cast a Spell!</span>
                 </a>
