--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
   <script src="javascripts/weapons.js"></script>
   <script src="javascripts/spells.js"></script>
   <script src="javascripts/sort.js"></script>
+  <script src="javascripts/audio.js"></script>
   <script src="javascripts/app.js"></script>
 
 </body>
