Fixed battle log

--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@
               <div class="battle">
                   <h2 id="battlePlayerName" class="battleName"> </h2>
                   <div id="userImage"></div>
+                  <span id="userDamage" class="damage"> </span>
                   <div class="userProgress progress"></div>
                   <div class="user stats">
                   </div>
@@ -430,6 +431,7 @@
               <div class="battle">
                   <h2 id="battleEnemyName" class="battleName"></h2>
                   <div id="enemyImage"></div>
+                  <span id="enemyDamage" class="damage"> </span>
                   <div class="enemyProgress progress"></div>
                   <div class="enemy stats">
                   </div>
